complete_project/local/logs/project.log
2019-12-19T02:12:44.113Z - normal: Load ~/.CocosCreator/settings.json
2019-12-19T02:12:45.347Z - normal: Initializing Asset Database
2019-12-19T02:12:45.362Z - normal: checking language setting...
2019-12-19T02:12:45.362Z - normal: Language: zh
2019-12-19T02:12:46.316Z - success: preview server running at http://localhost:7456
2019-12-19T02:12:46.320Z - success: protocol editor-framework registered
2019-12-19T02:12:46.320Z - success: protocol app registered
2019-12-19T02:12:46.320Z - success: protocol theme registered
2019-12-19T02:12:46.320Z - success: protocol packages registered
2019-12-19T02:12:46.320Z - success: protocol uuid registerred
2019-12-19T02:12:46.320Z - success: protocol db registerred
2019-12-19T02:12:46.321Z - success: protocol thumbnail registerred
2019-12-19T02:12:46.321Z - success: protocol unpack registerred
2019-12-19T02:12:46.321Z - success: protocol disable-commonjs registerred
2019-12-19T02:12:47.039Z - normal: connected!
2019-12-19T02:12:47.041Z - normal: Check project F:\code\cocos-example\complete_project
2019-12-19T02:12:47.043Z - normal: Initializing project F:\code\cocos-example\complete_project
2019-12-19T02:12:47.599Z - normal: Initializing Cocos2d
2019-12-19T02:12:48.856Z - normal: Initializing engine extends
2019-12-19T02:12:48.883Z - success: alipay-adapter loaded
2019-12-19T02:12:48.888Z - success: asset-db-debugger loaded
2019-12-19T02:12:48.889Z - success: baidu-adapter loaded
2019-12-19T02:12:48.890Z - success: color-picker loaded
2019-12-19T02:12:49.082Z - success: fb-audience-network loaded
2019-12-19T02:12:49.153Z - success: fb-live-stream loaded
2019-12-19T02:12:49.158Z - success: google-play-instant loaded
2019-12-19T02:12:49.207Z - success: huawei-runtime loaded
2019-12-19T02:12:49.496Z - success: cpk-publish loaded
2019-12-19T02:12:49.497Z - success: jsb-adapter loaded
2019-12-19T02:12:49.503Z - success: oppo-runtime loaded
2019-12-19T02:12:49.507Z - success: package-manager loaded
2019-12-19T02:12:49.667Z - success: qqplay-adapter loaded
2019-12-19T02:12:49.669Z - success: runtime-dev-tools loaded
2019-12-19T02:12:49.678Z - success: sdkbox loaded
2019-12-19T02:12:49.682Z - success: tester loaded
2019-12-19T02:12:49.684Z - success: ui-kit-preview-extra loaded
2019-12-19T02:12:49.698Z - success: ui-kit-preview loaded
2019-12-19T02:12:49.706Z - success: ui-kit loaded
2019-12-19T02:12:49.717Z - success: vivo-runtime loaded
2019-12-19T02:12:49.721Z - success: weapp-adapter loaded
2019-12-19T02:12:49.723Z - success: xiaomi-adapter loaded
2019-12-19T02:12:49.728Z - success: alipay-minigame loaded
2019-12-19T02:12:49.791Z - success: assets loaded
2019-12-19T02:12:49.795Z - success: builder loaded
2019-12-19T02:12:50.208Z - success: cocos-services loaded
2019-12-19T02:12:50.224Z - success: console loaded
2019-12-19T02:12:50.271Z - success: fb-instant-games loaded
2019-12-19T02:12:50.271Z - success: game-window loaded
2019-12-19T02:12:50.271Z - success: google-instant-games loaded
2019-12-19T02:12:50.287Z - success: hierarchy loaded
2019-12-19T02:12:50.287Z - success: inspector loaded
2019-12-19T02:12:50.287Z - success: keystore loaded
2019-12-19T02:12:50.287Z - success: node-library loaded
2019-12-19T02:12:50.302Z - success: package-asset loaded
2019-12-19T02:12:50.302Z - success: preferences loaded
2019-12-19T02:12:50.302Z - success: project-exporter loaded
2019-12-19T02:12:50.302Z - success: project-importer loaded
2019-12-19T02:12:50.302Z - success: project-settings loaded
2019-12-19T02:12:50.302Z - success: scene loaded
2019-12-19T02:12:50.318Z - success: simulator-debugger loaded
2019-12-19T02:12:50.318Z - success: sprite-editor loaded
2019-12-19T02:12:50.318Z - success: store loaded
2019-12-19T02:12:50.318Z - success: timeline loaded
2019-12-19T02:12:50.333Z - success: xiaomi-runtime loaded
2019-12-19T02:12:55.817Z - info: Cocos Services load base data!
2019-12-19T02:12:58.888Z - failed: [db-task][init] Failed to import asset F:\code\cocos-example\complete_project\assets\scripts\Menu.js, message: Compile error: SyntaxError: F:/code/cocos-example/complete_project/assets/scripts/Menu.js: Unexpected token (16:12)
  14 | export class Menu extends cc.Component {
  15 | 
> 16 |     private onBtnStart() {
     |             ^
  17 |         cc.director.loadScene('game'); //加载game场景
  18 |     }
  19 | }
    at Parser.pp$5.raise (G:\CocosCreator\resources\app.asar\node_modules\babylon\lib\index.js:4454:13)
    at Parser.pp.unexpected (G:\CocosCreator\resources\app.asar\node_modules\babylon\lib\index.js:1761:8)
    at Parser.pp$1.parseClassBody (G:\CocosCreator\resources\app.asar\node_modules\babylon\lib\index.js:2554:14)
    at Parser.pp$1.parseClass (G:\CocosCreator\resources\app.asar\node_modules\babylon\lib\index.js:2406:8)
    at Parser.pp$1.parseStatement (G:\CocosCreator\resources\app.asar\node_modules\babylon\lib\index.js:1843:19)
    at Parser.pp$1.parseExportDeclaration (G:\CocosCreator\resources\app.asar\node_modules\babylon\lib\index.js:2666:15)
    at Parser.pp$1.parseExport (G:\CocosCreator\resources\app.asar\node_modules\babylon\lib\index.js:2654:29)
    at Parser.pp$1.parseStatement (G:\CocosCreator\resources\app.asar\node_modules\babylon\lib\index.js:1884:74)
    at Parser.pp$1.parseBlockBody (G:\CocosCreator\resources\app.asar\node_modules\babylon\lib\index.js:2268:21)
    at Parser.pp$1.parseTopLevel (G:\CocosCreator\resources\app.asar\node_modules\babylon\lib\index.js:1778:8)
2019-12-19T02:12:59.548Z - normal: Loading packages
2019-12-19T02:12:59.558Z - normal: Watching packages
2019-12-19T02:13:00.147Z - normal: Run Application
2019-12-19T02:13:10.096Z - failed: load script [F:\code\cocos-example\complete_project\temp\quick-scripts\assets\scripts\Menu.js] failed : ReferenceError: onBtnStart is not defined
    at __define (F:\code\cocos-example\complete_project\temp\quick-scripts\assets\scripts\Menu.js:16:17)
    at F:\code\cocos-example\complete_project\temp\quick-scripts\assets\scripts\Menu.js:24:13
    at Object.<anonymous> (F:\code\cocos-example\complete_project\temp\quick-scripts\assets\scripts\Menu.js:31:11)
    at Object.<anonymous> (F:\code\cocos-example\complete_project\temp\quick-scripts\assets\scripts\Menu.js:34:3)
    at Module._compile (module.js:571:32)
    at Object.Module._extensions..js (module.js:580:10)
    at Module.load (module.js:488:32)
    at tryModuleLoad (module.js:447:12)
    at Function.Module._load (module.js:439:3)
    at Module.require (module.js:498:17)
2019-12-19T02:13:10.203Z - warn: Script attached to "Canvas" in scene "menu.fire" is missing or invalid. Detailed information:
Node path: "Canvas"
Asset url: "db://assets/menu.fire"
Script UUID: "9ba403c0-6ba8-4c22-94c5-95e9d71dca1f"
Class ID: "9ba40PAa6hMIpTFlenXHcof"

2019-12-19T06:51:00.168Z - failed: [db-task][sync-changes] Failed to import asset F:\code\cocos-example\complete_project\assets\scripts\Game.js, message: Compile error: SyntaxError: F:/code/cocos-example/complete_project/assets/scripts/Game.js: Unexpected token, expected , (67:4)
  65 |     }
  66 | 
> 67 |     onStartGame: function () {
     |     ^
  68 |         this.resetValue();
  69 |         this.enabled = true;
  70 |         this.gameOverNode.active = false;
    at Parser.pp$5.raise (G:\CocosCreator\resources\app.asar\node_modules\babylon\lib\index.js:4454:13)
    at Parser.pp.unexpected (G:\CocosCreator\resources\app.asar\node_modules\babylon\lib\index.js:1761:8)
    at Parser.pp.expect (G:\CocosCreator\resources\app.asar\node_modules\babylon\lib\index.js:1749:33)
    at Parser.pp$3.parseObj (G:\CocosCreator\resources\app.asar\node_modules\babylon\lib\index.js:3978:12)
    at Parser.pp$3.parseExprAtom (G:\CocosCreator\resources\app.asar\node_modules\babylon\lib\index.js:3719:19)
    at Parser.pp$3.parseExprSubscripts (G:\CocosCreator\resources\app.asar\node_modules\babylon\lib\index.js:3494:19)
    at Parser.pp$3.parseMaybeUnary (G:\CocosCreator\resources\app.asar\node_modules\babylon\lib\index.js:3474:19)
    at Parser.pp$3.parseExprOps (G:\CocosCreator\resources\app.asar\node_modules\babylon\lib\index.js:3404:19)
    at Parser.pp$3.parseMaybeConditional (G:\CocosCreator\resources\app.asar\node_modules\babylon\lib\index.js:3381:19)
    at Parser.pp$3.parseMaybeAssign (G:\CocosCreator\resources\app.asar\node_modules\babylon\lib\index.js:3344:19)
2019-12-19T07:10:45.761Z - info: shutdown preview server
